codex-rs/tui/src/snapshots/codex_tui__startup_draft__tests__startup_draft_account_picker_transition.snap
---
source: tui/src/startup_draft_tests.rs
expression: frames
---
before account picker: hidden (0x0 viewport)
---
after account picker:
╭───────────────────────────────────────╮
│ >_ OpenAI Codex (v<VERSION>)            │
│                                       │
│ model:     loading   /model to change │
│ directory: loading                    │
╰───────────────────────────────────────╯


› Ask Codex to do anything

  ? for shortcuts
